--- a/ShoutAboutApp/ShoutAboutApp/Info.plist
+++ b/ShoutAboutApp/ShoutAboutApp/Info.plist
@@ -39,5 +39,13 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
+	<key>UIAppFonts</key>
+	<array>
+		<string>TitilliumWeb-Bold.ttf</string>
+		<string>TitilliumWeb-Italic.ttf</string>
+		<string>TitilliumWeb-Light.ttf</string>
+		<string>TitilliumWeb-Regular.ttf</string>
+		<string>TitilliumWeb-SemiBold.ttf</string>
+	</array>
 </dict>
 </plist>
