--- a/ShoutAboutApp/ShoutAboutApp/GoogleService-Info.plist
+++ b/ShoutAboutApp/ShoutAboutApp/GoogleService-Info.plist
@@ -7,21 +7,21 @@
 	<key>AD_UNIT_ID_FOR_INTERSTITIAL_TEST</key>
 	<string>ca-app-pub-3940256099942544/4411468910</string>
 	<key>CLIENT_ID</key>
-	<string>778415710069-5ovv2qdv958ra1ima6ut70v2i9pvtamk.apps.googleusercontent.com</string>
+	<string>275879328562-e3344a589foqfvsojfan2mh2o1muj5eg.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.778415710069-5ovv2qdv958ra1ima6ut70v2i9pvtamk</string>
+	<string>com.googleusercontent.apps.275879328562-e3344a589foqfvsojfan2mh2o1muj5eg</string>
 	<key>API_KEY</key>
-	<string>AIzaSyDSKCXv5vi2cA1BB_yOxvqobDHLyTw9IIM</string>
+	<string>AIzaSyDtk_vHOtCvB2gTwssg3In07RSlTRbwvso</string>
 	<key>GCM_SENDER_ID</key>
-	<string>778415710069</string>
+	<string>275879328562</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>co.in.varyavega.ShoutAboutApp</string>
+	<string>co.in.varyavega.shoutaboutapp</string>
 	<key>PROJECT_ID</key>
-	<string>shoutabout-146808</string>
+	<string>shoutaboutapp-53d1c</string>
 	<key>STORAGE_BUCKET</key>
-	<string>shoutabout-146808.appspot.com</string>
+	<string>shoutaboutapp-53d1c.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<true/>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -33,8 +33,8 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true/>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:778415710069:ios:21806cd1557ee2bf</string>
+	<string>1:275879328562:ios:5defa8e8d8f62e93</string>
 	<key>DATABASE_URL</key>
-	<string>https://shoutabout-146808.firebaseio.com</string>
+	<string>https://shoutaboutapp-53d1c.firebaseio.com</string>
 </dict>
 </plist>
