--- a/ShoutAboutApp/ShoutAboutApp/Info.plist
+++ b/ShoutAboutApp/ShoutAboutApp/Info.plist
@@ -48,6 +48,8 @@
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
+	<true/>
+	<key>FirebaseAppDelegateProxyEnabled</key>
 	<false/>
 </dict>
 </plist>
