--- a/ShoutAboutApp/ShoutAboutApp/Info.plist
+++ b/ShoutAboutApp/ShoutAboutApp/Info.plist
@@ -20,6 +20,31 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>Fabric</key>
+	<dict>
+		<key>APIKey</key>
+		<string>774f7fad80a9d938d60d67ca6b4a3f3178814f6f</string>
+		<key>Kits</key>
+		<array>
+			<dict>
+				<key>KitInfo</key>
+				<dict/>
+				<key>KitName</key>
+				<string>Crashlytics</string>
+			</dict>
+			<dict>
+				<key>KitInfo</key>
+				<dict>
+					<key>consumerKey</key>
+					<string>odO2aAUrkcaESyGnXdpZcURVd</string>
+					<key>consumerSecret</key>
+					<string>8tQfOz9HEFkNLduS98BJGMm0rP5xZSgvQcU70ABmpAEtp5cxB7</string>
+				</dict>
+				<key>KitName</key>
+				<string>Digits</string>
+			</dict>
+		</array>
+	</dict>
 	<key>FirebaseAppDelegateProxyEnabled</key>
 	<false/>
 	<key>LSRequiresIPhoneOS</key>
